fix bug with match panel boxes on small viewports

--- a/matchViewer/matchStyles.css
+++ b/matchViewer/matchStyles.css
@@ -79,6 +79,7 @@ tr.playerDataRow {
 }
 
 .match {
+    min-width: fit-content;
     border: 1px solid black;
     border-radius: 5px;
     margin:5px;
